--- a/examples/dashboard/src/css/daisyui.css
+++ b/examples/dashboard/src/css/daisyui.css
@@ -2,14 +2,24 @@
 @tailwind components;
 @tailwind utilities;
 
+/*@layer components {*/
 .mockup-code pre:before {
-  display: none;
+    display: none;
 }
 
 .mockup-code:before {
-  display: none;
+    display: none;
 }
 
 .mockup-code pre {
-  padding-left: 1.25rem;
+    /*@apply padding-left: 1.25rem;*/
+    @apply pl-5
+}
+
+/*}*/
+
+@layer utilities {
+    .width-minus-scrollbar {
+        width: calc(100vw - (100vw - 100%))
+    }
 }
