--- a/examples/dashboard/src/css/daisyui.css
+++ b/examples/dashboard/src/css/daisyui.css
@@ -3,21 +3,21 @@
 @tailwind utilities;
 
 @layer components {
-    .mockup-code pre:before {
-        @apply hidden;
-    }
+  .mockup-code pre:before {
+    @apply hidden;
+  }
 
-    .mockup-code:before {
-        @apply hidden;
-    }
+  .mockup-code:before {
+    @apply hidden;
+  }
 
-    .mockup-code pre {
-        @apply pl-5;
-    }
+  .mockup-code pre {
+    @apply pl-5;
+  }
 }
 
 @layer utilities {
-    .w-full-no-scrollbar {
-        width: calc(100vw - (100vw - 100%))
-    }
+  .w-full-no-scrollbar {
+    width: calc(100vw - (100vw - 100%));
+  }
 }
